--- a/soukya_final_draft/main.tex
+++ b/soukya_final_draft/main.tex
@@ -82,12 +82,14 @@
 \begin{abstract}
 Systems for automatic speaker verification (ASV) are increasingly deployed in security-sensitive applications such as biometric authentication, access control, and remote identity verification. While recent advances in deep learning-based spoofing countermeasures---including self-supervised learning approaches, graph attention networks like AASIST, and wav2vec-based detectors---have significantly improved detection accuracy, emerging research reveals critical vulnerabilities to adversarial attacks. Studies have demonstrated that carefully crafted perturbations can cause state-of-the-art countermeasures to misclassify spoofed audio as genuine, with universal attacks proving effective even in black-box settings.
 
-This thesis investigates the adversarial robustness of a lightweight log-mel-based feed-forward neural network (approximately 300K parameters) for synthetic audio detection, comparing its resilience against recent CNN-based and self-supervised countermeasures. The nNetwork was evaluated under white-box Fast Gradient Sign Method (FGSM) and Projected Gradient Descent (PGD) attacks using a perturbation magnitude of $\epsilon = 0.03$.
+This thesis investigates the adversarial robustness of a lightweight log-mel-based feed-forward neural network (approximately 300K parameters) for synthetic audio detection, comparing its resilience against recent CNN-based and self-supervised countermeasures. The network was evaluated under white-box Fast Gradient Sign Method (FGSM) and Projected Gradient Descent (PGD) attacks using a perturbation magnitude of $\epsilon = 0.03$.
 
 Experimental results reveal significant vulnerability. On the ASVspoof2019 LA dataset, FGSM attacks with $\epsilon = 0.03$ reduced performance significantly.
 
 These findings demonstrate that high baseline classification accuracy does not guarantee adversarial robustness, and that lightweight models face disproportionate vulnerability despite their efficiency advantages. The results underscore the critical need for adversarial-aware evaluation protocols when designing deployable ASV countermeasures for resource-constrained environments.
 \end{abstract}
+
+\keywords{Audio Spoofing Detection, Adversarial Robustness, Deep Learning, ASVSpoof 2019, WILD Dataset}
 
 
 \section{Introduction}
@@ -226,6 +228,13 @@ The developmental nature of the WILD dataset creates a unique set of difficultie
 Waveform data was loaded into the preprocessing pipeline and resampled onto the regular 16 kHz sampling rate. To calculate log-mel spectrograms, librosa's library was used, with 80 mel bins being chosen as a good compromise between frequency resolution and compute time. After this step was finished, each spectrogram was converted to a decibel scale and normalized so that they all had a mean of 0 and variance of 1.
 
 The issue of variability in length is exacerbated by the fact that recordings have been acquired from multiple sources that differ in length. As such, a single fixed length has been established for all of the spectrograms based upon the median length of all the recordings within the entire dataset; shorter recordings have been padded with zeros at the end, while longer recordings have been truncated. Even though truncating longer recordings could remove important components of the signal, flattening spectrograms into vectors allows for the consistent creation of batches for training, as well as consistency with the typical ASVspoof processing convention used during all experimental runs.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/bonafide_vs_spoof.png}
+    \caption{Comparison of Bonafide and Spoof Audio: Waveforms, Spectrograms, Mel-Spectrograms, and MFCCs.}
+    \label{fig:audio_comparison}
+\end{figure}
 
 \subsection{Model Architecture}
 
@@ -369,9 +378,9 @@ Tables \ref{tab:asvspoof_results} and \ref{tab:wild_results} break down all the 
 \midrule
 Baseline (Clean) & 0.9741 & 0.9972 & 0.9739 & 0.9854 & 0.0251 & -- \\
 \midrule
-FGSM ($\epsilon$=0.03) & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] \\
+FGSM ($\epsilon$=0.03) & 0.8969 & 0.8977 & 0.9989 & 0.9456 & 0.9820 & 0.9943 \\
 \midrule
-PGD ($\epsilon$=0.03) & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] \\
+PGD ($\epsilon$=0.03) & 0.8972 & 0.8976 & 0.9996 & 0.9458 & 0.9902 & 0.9959 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -387,9 +396,9 @@ PGD ($\epsilon$=0.03) & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX
 \midrule
 Baseline (Clean) & 0.9938 & 0.9871 & 0.9951 & 0.9917 & 0.0062 & -- \\
 \midrule
-FGSM ($\epsilon$=0.03) & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] \\
+FGSM ($\epsilon$=0.03) & 0.8098 & 0.6624 & 0.9963 & 0.7958 & 0.1729 & 0.0037 \\
 \midrule
-PGD ($\epsilon$=0.03) & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] & [XX.XX] \\
+PGD ($\epsilon$=0.03) & 0.9941 & 0.9993 & 0.9847 & 0.9920 & 0.0055 & 0.0153 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -433,10 +442,10 @@ Refer to the side-by-side comparison in Table \ref{tab:architecture_comparison} 
 \textbf{Model} & \textbf{Baseline} & \textbf{FGSM} & \textbf{PGD} \\
  & \textbf{EER} & \textbf{($\epsilon$=0.03)} & \textbf{($\epsilon$=0.03)} \\
 \midrule
-Lightweight & 0.0251 & [XX.XX] & [XX.XX] \\
-LCNN-big & 0.0200 & [XX.XX] & [XX.XX] \\
-LCNN-small & 0.0280 & [XX.XX] & [XX.XX] \\
-SENet12 & 0.0220 & [XX.XX] & [XX.XX] \\
+Lightweight & 0.0251 & 0.9820 & 0.9902 \\
+LCNN-big & 0.0200 & 0.3588 & 0.5367 \\
+LCNN-small & 0.0280 & -- & -- \\
+SENet12 & 0.0220 & -- & -- \\
 \bottomrule
 \end{tabular}
 \end{table}
